--- a/css/styles.css
+++ b/css/styles.css
@@ -384,6 +384,7 @@ header {
 .adr-soc {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 .footer-header {
@@ -502,21 +503,18 @@ header {
 
 /* Форма в Футере */
 
+.form-footer {
+  width: 570px;
+  height: 86px;
+}
+
 .footer-form-subscribe {
   margin-left: 93px;
 }
 
-.subscribe-footer-section {
-  display: flex;
-  flex-direction: row;
-}
-.form-subscribe {
-  /* display: flex;
-  flex-direction: row; */
-}
-
 .form-footer {
-  margin-right: 12px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .form-footer-head {
@@ -531,40 +529,49 @@ header {
 }
 
 .form-footer input {
-  width: 100%;
+  width: 358px;
   height: 50px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: inherit;
+  color: var(--primary-white-color);
 }
 
 .subscribe-btn {
-  position: absolute;
+  position: relative;
   display: flex;
 
   align-items: center;
   min-width: 200px;
   height: 50px;
-  padding: 10px 32px;
+  padding: 10px 29px;
   border-radius: 4px;
+  margin-left: 12px;
   border-color: transparent;
   background-color: var(--logo-accent-color);
   color: var(--primary-white-color);
   font-size: 16px;
   font-weight: 700;
-  letter-spacing: 0.06;
+  letter-spacing: 0.06em;
+  cursor: pointer;
   line-height: 1.88;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .form-footer-icon {
-  position: relative;
+  position: absolute;
   margin-left: 10px;
   top: 50%;
   transform: translateY(-50%);
-  left: 10px;
+  right: 13px;
 }
 
 /* оформление index.html */
@@ -680,9 +687,8 @@ header {
   padding-left: 42px;
   margin-top: 4px;
 
-  border-width: 1px;
-  border-color: rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -733,6 +739,7 @@ header {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -756,6 +763,7 @@ header {
   font-size: 12px;
   line-height: 1.17;
   font-weight: 400;
+  letter-spacing: 0.01em;
   color: var(--primary-text-color);
 }
 
